--- a/BabyLog_Swift/Base.lproj/Main.storyboard
+++ b/BabyLog_Swift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mr3-Nf-5xd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
@@ -16,9 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="login_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="qWc-Jh-Wgj">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                            </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G6A-at-G1o">
                                 <rect key="frame" x="20" y="354" width="335" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -37,6 +34,9 @@
                                     <action selector="logInAccount:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7s9-4i-FD8"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="login_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="qWc-Jh-Wgj">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -48,7 +48,114 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="304.5" y="437.5"/>
+            <point key="canvasLocation" x="-109.5" y="640.5"/>
+        </scene>
+        <!--More-->
+        <scene sceneID="cLO-wN-Sm4">
+            <objects>
+                <viewController id="TlM-CH-6go" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="R3N-O9-Wzo"/>
+                        <viewControllerLayoutGuide type="bottom" id="AlO-aE-XLr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="m7c-xk-MGZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2g0-ga-pHJ">
+                                <rect key="frame" x="-7" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="More " id="dfu-ui-hwk">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" id="9oC-Fd-jCF"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" id="90l-2f-3M9"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" tag="3" title="More" image="tabicon_class_on.png" id="rNd-t9-WJa"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pmf-r9-wqA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="876.5" y="155.5"/>
+        </scene>
+        <!--Log-->
+        <scene sceneID="qvt-FS-p64">
+            <objects>
+                <viewController id="rc2-VK-VL2" customClass="LogTabViewController" customModule="BabyLog_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2rY-AH-QNr"/>
+                        <viewControllerLayoutGuide type="bottom" id="MiN-Z8-BBB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iDs-E1-qmY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QN5-T7-uxz">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Daily Log" id="6lU-mV-O9x">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="6q9-hs-vPh">
+                                            <connections>
+                                                <segue destination="7so-Tl-4df" kind="show" identifier="SegueToShowAddLogVC" id="7YW-lQ-AFI"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="PhX-EF-AQ8">
+                                            <connections>
+                                                <action selector="pickDateFromCalendar:" destination="rc2-VK-VL2" id="cQc-J8-9VG"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6Bi-G5-R0W">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="logCell" id="vPc-cR-yvL">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vPc-cR-yvL" id="pw3-vw-BJX">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Log" image="tabicon_log_on.png" id="pca-CI-4c9"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="logView" destination="6Bi-G5-R0W" id="4Ym-hj-PFQ"/>
+                        <outlet property="navigationBar" destination="QN5-T7-uxz" id="3Mg-az-UeR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W9E-mD-hrb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="780.5" y="-568.5"/>
+        </scene>
+        <!--Main Tab Bar Controller-->
+        <scene sceneID="ilS-dd-m0K">
+            <objects>
+                <tabBarController id="mr3-Nf-5xd" customClass="MainTabBarController" customModule="BabyLog_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="8sz-n3-AOp">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="rc2-VK-VL2" kind="relationship" relationship="viewControllers" id="djL-87-rzD"/>
+                        <segue destination="z3v-Lb-ZTu" kind="relationship" relationship="viewControllers" id="qyz-oq-4ho"/>
+                        <segue destination="TlM-CH-6go" kind="relationship" relationship="viewControllers" id="7Iw-m8-rzY"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BPM-AE-XTd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-39" y="-237"/>
         </scene>
         <!--Add Daily Log View Controller-->
         <scene sceneID="d6U-LJ-z5O">
@@ -129,10 +236,44 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8dA-Ki-c8R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="773.5" y="477.5"/>
+            <point key="canvasLocation" x="1288.5" y="-568.5"/>
+        </scene>
+        <!--Video-->
+        <scene sceneID="Hjz-zB-unR">
+            <objects>
+                <viewController id="z3v-Lb-ZTu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Qja-SV-QMK"/>
+                        <viewControllerLayoutGuide type="bottom" id="eQI-kV-hp6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="q61-ks-e5T">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mtw-aL-Vs0">
+                                <rect key="frame" x="-7" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Video" id="yxF-uO-m3g">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" id="saY-pf-vAB"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" id="fHJ-L6-xYc"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" tag="1" title="Video" image="tabicon_video_on.png" id="5bT-ze-MQg"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9hE-VL-Q1k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="780.5" y="936.5"/>
         </scene>
     </scenes>
     <resources>
         <image name="login_bg.png" width="320" height="480"/>
+        <image name="tabicon_class_on.png" width="25" height="25"/>
+        <image name="tabicon_log_on.png" width="25" height="25"/>
+        <image name="tabicon_video_on.png" width="23" height="23"/>
     </resources>
 </document>
