--- a/BabyLog_Swift/Base.lproj/Main.storyboard
+++ b/BabyLog_Swift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mr3-Nf-5xd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
@@ -49,9 +49,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-524.5" y="-237.5"/>
+            <point key="canvasLocation" x="-645.5" y="-232.5"/>
         </scene>
-        <!--More-->
+        <!--View Controller-->
         <scene sceneID="cLO-wN-Sm4">
             <objects>
                 <viewController id="TlM-CH-6go" sceneMemberID="viewController">
@@ -75,12 +75,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="3" title="More" image="tabicon_class_on.png" id="rNd-t9-WJa"/>
+                    <tabBarItem key="tabBarItem" tag="3" systemItem="more" id="rNd-t9-WJa"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pmf-r9-wqA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="876.5" y="155.5"/>
+            <point key="canvasLocation" x="284.5" y="840.5"/>
         </scene>
         <!--Log-->
         <scene sceneID="qvt-FS-p64">
@@ -111,15 +111,44 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6Bi-G5-R0W">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6Bi-G5-R0W">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="logCell" id="vPc-cR-yvL">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="logCell" rowHeight="88" id="vPc-cR-yvL" customClass="LogItemTableViewCell" customModule="BabyLog_Swift" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vPc-cR-yvL" id="pw3-vw-BJX">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="StartEndTime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DdD-lQ-M2A">
+                                                    <rect key="frame" x="8" y="8" width="102" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Activity Type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pcz-r9-UNU">
+                                                    <rect key="frame" x="132" y="8" width="97" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Activity Details" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Prl-xh-CKh">
+                                                    <rect key="frame" x="132" y="37" width="113" height="35"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="login_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="6Y7-K7-i2g">
+                                                    <rect key="frame" x="16" y="28" width="54" height="44"/>
+                                                </imageView>
+                                            </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="activityDetailsLabel" destination="Prl-xh-CKh" id="Hvx-5s-o5r"/>
+                                            <outlet property="activityIcon" destination="6Y7-K7-i2g" id="hcR-EE-rG2"/>
+                                            <outlet property="activityTypeLabel" destination="pcz-r9-UNU" id="501-V2-SMS"/>
+                                            <outlet property="startEndTimeLabel" destination="DdD-lQ-M2A" id="LZZ-fO-LT5"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -151,6 +180,7 @@
                     <connections>
                         <segue destination="rc2-VK-VL2" kind="relationship" relationship="viewControllers" id="djL-87-rzD"/>
                         <segue destination="z3v-Lb-ZTu" kind="relationship" relationship="viewControllers" id="qyz-oq-4ho"/>
+                        <segue destination="PHP-mY-Vr5" kind="relationship" relationship="viewControllers" id="zcr-Ks-0WT"/>
                         <segue destination="TlM-CH-6go" kind="relationship" relationship="viewControllers" id="7Iw-m8-rzY"/>
                     </connections>
                 </tabBarController>
@@ -197,13 +227,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xWu-GA-4ND">
-                                <rect key="frame" x="45" y="298" width="252" height="173"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Content" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHb-Yt-Ark">
                                 <rect key="frame" x="39" y="269" width="80" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -225,6 +248,13 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xWu-GA-4ND">
+                                <rect key="frame" x="45" y="298" width="252" height="173"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -239,7 +269,7 @@
             </objects>
             <point key="canvasLocation" x="1288.5" y="-568.5"/>
         </scene>
-        <!--Video-->
+        <!--Message-->
         <scene sceneID="Hjz-zB-unR">
             <objects>
                 <viewController id="z3v-Lb-ZTu" sceneMemberID="viewController">
@@ -254,7 +284,7 @@
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mtw-aL-Vs0">
                                 <rect key="frame" x="-7" y="20" width="375" height="44"/>
                                 <items>
-                                    <navigationItem title="Video" id="yxF-uO-m3g">
+                                    <navigationItem title="Message" id="yxF-uO-m3g">
                                         <barButtonItem key="leftBarButtonItem" title="Item" id="saY-pf-vAB"/>
                                         <barButtonItem key="rightBarButtonItem" title="Item" id="fHJ-L6-xYc"/>
                                     </navigationItem>
@@ -263,18 +293,49 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="1" title="Video" image="tabicon_video_on.png" id="5bT-ze-MQg"/>
+                    <tabBarItem key="tabBarItem" tag="2" title="Message" image="tabicon_message_on.png" id="5bT-ze-MQg"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hE-VL-Q1k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="780.5" y="936.5"/>
+            <point key="canvasLocation" x="-209.5" y="840.5"/>
+        </scene>
+        <!--Class-->
+        <scene sceneID="ERh-FH-HZU">
+            <objects>
+                <viewController id="PHP-mY-Vr5" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Spp-4g-7hF"/>
+                        <viewControllerLayoutGuide type="bottom" id="U6z-ZI-IqI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="emi-Fd-dci">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="556-Ph-Axr">
+                                <rect key="frame" x="-7" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Class Page" id="ojd-tl-dfC">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" id="AOP-ki-d03"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" id="xMT-12-HPN"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" tag="1" title="Class" image="tabicon_class_on.png" id="uWY-v0-g5w"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="weP-IO-7Qv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="780.5" y="201.5"/>
         </scene>
     </scenes>
     <resources>
         <image name="login_bg.png" width="320" height="480"/>
         <image name="tabicon_class_on.png" width="25" height="25"/>
         <image name="tabicon_log_on.png" width="25" height="25"/>
-        <image name="tabicon_video_on.png" width="23" height="23"/>
+        <image name="tabicon_message_on.png" width="23" height="23"/>
     </resources>
 </document>
