--- a/BabyLog_Swift/Base.lproj/Main.storyboard
+++ b/BabyLog_Swift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mr3-Nf-5xd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
@@ -260,7 +260,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="activityType" destination="Xae-Zs-4eH" id="HIp-OW-XE0"/>
+                        <outlet property="activityTypeTextField" destination="Xae-Zs-4eH" id="V6y-0l-JHU"/>
                         <outlet property="endTime" destination="Kxt-O9-hQW" id="TQL-xo-NbQ"/>
                         <outlet property="startTime" destination="Tv4-eC-1Ok" id="UCp-Mc-9hy"/>
                     </connections>
